[SQONE-275] fix some spacing inconsitency between single and regular subheader

--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -8,9 +8,18 @@
 	position: relative;
 	display: flex;
 	align-items: center;
+	margin-bottom: var(--spacer-80);
 
 	@media (--viewport-medium) {
-		padding-top: var(--spacer-80);
+		padding: var(--spacer-80) 0;
+	}
+}
+
+.c-subheader--single {
+	margin-bottom: 0;
+
+	@media (--viewport-medium) {
+		padding: var(--spacer-80) 0 0 0;
 	}
 }
 
